Fixed an import error at the movieList component. Some errors only show up when i stop the app and serve it again. Changed the ion-images to images at the movie list. I lose performance and use too much data by doing this but there is no better way (other than but a black bar at the top of the image to hide the brokenImgIcon, since the ion-image hides the <img> tag inside it's shadow dom and i cannot add a onerror= function to it to hide the broken image link. The api doc says that adding the alt property to the ion-img should hide that broken img icon but it does not. And i dont want the broken img icon to appear. So i changed it to a regular img. I added a little loader animation to the movie poster before it shows up but, since it probably takes a lot or processing power (it is, after all, behind every single image)  i removed it.

--- a/src/app/home/dashboard/movie-list/movie-list.component.scss
+++ b/src/app/home/dashboard/movie-list/movie-list.component.scss
@@ -19,7 +19,6 @@
         background: -webkit-linear-gradient(left, rgb(34,31,31) 0%,rgba(0,0,0,0) 100%);
         background: linear-gradient(to right, rgb(34,31,31) 0%,rgba(0,0,0,0) 100%); 
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 );
-        
     }
     &:after{
         right: 8px;        
@@ -42,10 +41,33 @@
             width: 104px;
             height: 182px;
             --min-height	: 100%;
-            background: rgba(0,0,0, 0.7);
+            background: #040303;
             margin: 2px;
             position: relative;
-            ion-img{
+            
+            // .loading-background{
+            //     animation: scrl forwards 1s infinite linear;
+            //     background: #292929;
+            //     width: 64px;
+            //     left: 0;
+            //     top: -32px;
+            //     bottom: -32px;
+            //     transform: rotateZ(30deg);
+            //     opacity: 0.1;
+            //     filter: blur(3px);
+            //     position: absolute;
+            // }
+            // @keyframes scrl{
+            //     0%{
+            //         left: -128px;
+            //     }
+            //     100%{
+            //         left: 198px;
+            //     }
+            // }
+
+
+            img{
                 position: absolute;
                 top: 0;
                 left: 0;            
